# prism

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: compiler-roadmap.en.md  compiler-roadmap.zh.md
include/prism/ast/: ast_context.hpp  ast_dumper.hpp  decl.hpp  expr.hpp  stmt.hpp
include/prism/basic/: casting.hpp  diagnostics.hpp  error.hpp  source_location.hpp
include/prism/basic/ADT/: scoped_hash_map.hpp  small_vector.hpp  string_ref.hpp
include/prism/codegen/: ast_lowering.hpp
include/prism/codegen/llvm/: llvm_codegen.hpp
include/prism/codegen/x86_64/: x86_64_codegen.hpp
include/prism/core/allocator/: bump.hpp
include/prism/core/container/: expected.hpp  hash_map.hpp  optional.hpp  vector.hpp
include/prism/core/format/: format.hpp
include/prism/core/io/: raw_ostream.hpp
include/prism/core/memory/: function.hpp  shared_ptr.hpp  unique_ptr.hpp
include/prism/core/string/: string.hpp  string_view.hpp
include/prism/core/utility/: hash.hpp  move.hpp  type_traits.hpp
include/prism/driver/: compiler.hpp
include/prism/frontend/: lexer.hpp  parser.hpp  source_manager.hpp
include/prism/ir/: basic_block.hpp  constant.hpp  context.hpp  function.hpp  instruction.hpp  ir_builder.hpp  ir_printer.hpp  module.hpp  type.hpp  use.hpp  user.hpp  value.hpp  verifier.hpp
include/prism/opt/: pass_manager.hpp
include/prism/runtime/: runtime.hpp
include/prism/sema/: semantic_analyzer.hpp  type_checker.hpp
src/ast/: ast_context.cc  ast_dumper.cc  decl.cc  expr.cc  stmt.cc
src/basic/: diagnostics.cc  error.cc
src/codegen/: ast_lowering.cc
src/codegen/llvm/: llvm_codegen.cc
src/codegen/x86_64/: x86_64_codegen.cc
src/driver/: compiler.cc
src/frontend/: lexer.cc  parser.cc
src/ir/: basic_block.cc  constant.cc  context.cc  function.cc  instruction.cc  ir_builder.cc  ir_printer.cc  module.cc  type.cc  use.cc  user.cc  value.cc  verifier.cc
src/opt/: pass_manager.cc
src/runtime/: runtime.cc
src/sema/: semantic_analyzer.cc  type_checker.cc
tests/examples/: factorial.cc
tests/unit/: test_all.cc
